--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
-  "devDependencies": {
-    "webpack": "^3.11.0"
-  },
+  "devDependencies": {},
   "scripts": {
-    "build": "webpack"
+    "dev": "parcel ./demo/index.html"
   }
 }
