--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
     "react": "^16.2.0",
