--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "babel-preset-react-app": "^3.1.1"
   },
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel ./example/index.html"
   }
 }
